tests/baselines/reference/setterWithReturn(strict=true).errors.txt
setterWithReturn.ts(2,16): error TS7032: Property 'p1' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
setterWithReturn.ts(2,19): error TS7006: Parameter 'arg1' implicitly has an 'any' type.
setterWithReturn.ts(4,13): error TS2408: Setters cannot return a value.
setterWithReturn.ts(7,13): error TS2408: Setters cannot return a value.


==== setterWithReturn.ts (4 errors) ====
    class C234 {
        public set p1(arg1) {
                   ~~
!!! error TS7032: Property 'p1' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                      ~~~~
!!! error TS7006: Parameter 'arg1' implicitly has an 'any' type.
            if (true) {
                return arg1;
                ~~~~~~
!!! error TS2408: Setters cannot return a value.
            }
            else {
                return 0;
                ~~~~~~
!!! error TS2408: Setters cannot return a value.
            }
       }
    }